# RaiseGG

./: .env.example  .env.gemini  .env.prod-check  .env.vc  .gitignore  CAUCASIUM_ANALYSIS.md  deployer-keypair.json  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  telegram-login.bat  tsconfig.json  vercel.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/raise_gg/: Cargo.toml
anchor/programs/raise_gg/src/: lib.rs
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
components/: ShareButtons.tsx
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
hooks/: usePing.ts
lib/: achievements.ts  admin.ts  battle-pass.ts  blog.ts  bounty-board.ts  challenges.ts  clan-wars.ts  coach-bet.ts  countries.ts  cybercafe-outreach.ts  database.sql  dathost.ts  discord-bot.ts  dota-heroes.ts  elo.ts  email.ts  escrow.ts  events.ts  facebook.ts  faucet.ts  game-servers.ts  hltv-poster.ts  holiday-tournaments.ts  hubs.ts  ladders.ts  match-verify.ts  matches.ts  meme-templates.ts  migrations.ts  missions.ts  monitor.ts  notifications.ts  outreach-templates.ts  rarity.ts  rate-limit.ts  reddit-community.ts  reddit-poster.ts  referral.ts  schemas.ts  seasons.ts  (+22 more)
marketing/: all-marketing-channels.md  copy-paste-messages.md  directory-listings.md  forum-posts.md  gemini_banner.json  outreach-messages.md  product-hunt-launch.md  reddit-posts.md  show-hn-post.md  streamer-partnerships.md
migrations/: 004_team_matches.sql
(+474 files in other folders)
