[package]
name = "raise_gg"
version = "0.1.0"
description = "RaiseGG trustless stake escrow — Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raise_gg"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang  = { version = "=1.0.0-rc.5", features = ["init-if-needed"] }
anchor-spl   = { version = "=1.0.0-rc.5", features = ["token", "associated_token"] }
